# PiperControlPanel

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
config/: demo.yaml  policy.yaml  robot.yaml
docs/: architecture.md  hardware_setup.md  roadmap.md
piper_control_unit_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: activate_can.sh  bootstrap_env.sh  check_can.sh  close_gripper.py  enable_robot.py  find_all_can_port.sh  install_system_deps.sh  launch_gui.sh  move_joint_demo.py  open_gripper.py  read_state.py  run_policy_loop.py
src/app/: camera_demo.py  factory.py  manual_control.py  session.py
src/core/: action.py  controller.py  executor.py  observation.py  robot_state.py  safety.py
src/drivers/: camera_driver.py  mock_driver.py  piper_driver.py
src/gui/: __init__.py  __main__.py  main_window.py  view_model.py
src/policies/: base_policy.py  mock_policy.py  openpi_ws_policy.py  remote_http_policy.py
src/utils/: config.py  logger.py  timing.py
tests/: test_mock_driver.py  test_mock_policy_loop.py  test_safety.py  test_session.py
