[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piper-control-unit-demo"
version = "0.1.0"
description = "A modular real-robot control unit demo for the AgileX Piper arm."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Claude Code" }
]
dependencies = [
  "PyYAML>=6.0,<7.0",
  "requests>=2.32,<3.0",
  "websockets>=12.0,<16.0",
]

[project.optional-dependencies]
real = [
  "piper-sdk>=0.6.1",
  "python-can>=4.4,<5.0",
]
vision = [
  "opencv-python>=4.10,<5.0",
]
gui = [
  "PySide6>=6.6,<7.0",
]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
piper-gui = "src.gui.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
